# MkLIB

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bkup  MkLib_test
src/: CMakeLists.txt  Makefile  MkAbstract.hpp  MkArray.cpp  MkArray.hpp  MkCircle.cpp  MkCircle.hpp  MkColor.cpp  MkColor.hpp  MkCube.cpp  MkCube.hpp  MkCylinder.cpp  MkCylinder.hpp  MkLine.cpp  MkLine.hpp  MkMatrix.cpp  MkMatrix.hpp  MkMisc.cpp  MkMisc.hpp  MkObject.cpp  MkObject.hpp  MkPlane.cpp  MkPlane.hpp  MkPoint _test.hpp  MkPoint.cpp  MkPoint.hpp  MkPointData.cpp  MkPointData.hpp  MkPoint_test.cpp  MkPolygon.cpp  MkPolygon.hpp  MkRect.cpp  MkRect.hpp  MkShape.cpp  MkShape.hpp  MkSphere.cpp  MkSphere.hpp  MkTriangle.cpp  MkTriangle.hpp  Shader.cpp  (+5 more)
tests/: CMakeLists.txt  CMakeLists_bak.txt  CMakeLists_gl_trying.txt  gltest.cpp  gltest.hpp  test.cpp  test.hpp
